# alfath_torrent

./: .gitignore  Cargo.toml  README.md
public/: index.html  script.js  style.css
src/: lib.rs  main.rs
src/alfath_torrent_lib/: init.rs  mod.rs  piratebay.rs  structure.rs  utils.rs
src/frontend/: index.html
src/server/: handler.rs  init.rs  mod.rs
src/torrent/: folder.rs  init.rs  mod.rs  piratebay.rs
src/torrent_handler/: transmission.rs
