[package]
name = "alfath_torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "=0.4.28"
once_cell = "1.21.3"
simplelog = "0.12.2"
tokio = { version = "*", features = ["full"] }
transmission-rpc = "0.5.0"
reqwest = { version = "*", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
time = "0.3.44"
urlencoding = "2.1.3"
clap = "4.5.49"
